Getting server to work a bit better, updating documentation, clean up